@@ -56,3 +56,4 @@
 - Canoe travel interface now animates correctly
 - Fix how the attack skill cape perk is calculated. It should now have a much more noticeable effect
 - Properly track leaf-bladed sword drops in ::stats command
+- Make broad bolts tradeable and fix their ranged strength
